--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -70,7 +70,7 @@
                 <th scope="col">Nome</th>
                 <th scope="col">Tipo</th>
                 <th scope="col">Preço</th>
-                <th scope="col">Modificar<h>
+                <th scope="col">Modificar</th>
             </tr>
         </thead>
         <tbody>
