--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                             </a>
                         </li>
 
-                        <li class="side-item" data-url="/Home/Index">
+                        <li class="side-item" data-url="/Revendedor/Index">
                         <a>
                                 <i class="fa-solid fa-user"></i>
                                 <span class="item-description">
