--- a/cafeservellocontroler/Views/Revendedor/ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/ApagarConfirmacao.cshtml
@@ -1,5 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa
-@model ModelRevendedor
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model RevendedorViewModel
 @{
     ViewData["Title"] = "Confirmação de Apagar Revendedor";
 }
