--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa
-@model List<ModelRevendedor>
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model List<RevendedorViewModel>
 @{
     ViewData["Title"] = "Revendedor";
 }
@@ -26,7 +26,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                     </div>
                     <div class="modal-body">
-                        @Html.Partial("_Criar", new ModelRevendedor())
+                        @Html.Partial("_Criar", new RevendedorViewModel())
                     </div>
                 </div>
             </div>
@@ -67,6 +67,7 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th scope="col">Codigo</th>
                     <th scope="col">Nome</th>
                     <th scope="col">Telefone</th>
                     <th scope="col">Email</th>
@@ -78,7 +79,7 @@
             <tbody>
                 @if (Model != null && Model.Any())
                 {
-                    foreach (ModelRevendedor revendedor in Model)
+                    foreach (RevendedorViewModel revendedor in Model)
                     {
                         <tr>
                             <th scope="row">@revendedor.Id</th>
@@ -95,7 +96,7 @@
                                     @*Esse daqui e o modal de EDITAR REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
 
 
-                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
+                                    @* <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
                                         Editar
                                     </a>
 
@@ -111,13 +112,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> *@
 
 
 
                                     @*Esse daqui e o modal de APAGAR O REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
 
-                                    <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
+                                @*     <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
                                         Apagar
                                     </a>
 
@@ -134,7 +135,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> *@
                             </td>
                         </tr>
                     }
