--- a/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
@@ -1,5 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa
-@model ModelRevendedor
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model RevendedorViewModel
 
 <form id="formProduto" asp-controller="Revendedor" asp-action="Criar" method="post">
     <div class="form-group">
