--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -96,7 +96,7 @@
                                     @*Esse daqui e o modal de EDITAR REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
 
 
-                                    @* <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
+                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
                                         Editar
                                     </a>
 
@@ -112,7 +112,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> *@
+                                    </div> 
 
 
 
