--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -118,7 +118,7 @@
 
                                     @*Esse daqui e o modal de APAGAR O REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
 
-                                @*     <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
+                                    <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
                                         Apagar
                                     </a>
 
@@ -130,12 +130,12 @@
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    @Html.Partial("_ApagarConfirmacao", revendedor)
+                                                    @Html.Partial("~/Views/Revendedor/ApagarConfirmacao.cshtml", revendedor)
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div> *@
+                                </div> 
                             </td>
                         </tr>
                     }
