--- a/cafeservellocontroler/Views/Produto/_ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Produto/_ApagarConfirmacao.cshtml
@@ -1,4 +1,5 @@
-﻿@model ModelProduto
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model ProdutoViewModel
 @{
     ViewData["Title"] = "Confirmação de Apagar Produto";
 }
