--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@model ModelProduto
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model ProdutoViewModel
 
 <form id="formProduto" asp-controller="Produto" asp-action="Criar" method="post">
     <div class="form-group">
@@ -17,6 +18,12 @@
         <label for="preco">Preço</label>
         <input type="text" asp-for="Preco" class="form-control" placeholder="Escreva o preço">
         <span asp-validation-for="Preco" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label for="estoque">Estoque</label>
+        <input type="text" asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
+        <span asp-validation-for="Estoque" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary w-100 mt-3">Adicionar</button>
