--- a/cafeservellocontroler/Views/Produto/_Editar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Editar.cshtml
@@ -1,4 +1,5 @@
-﻿@model ModelProduto
+﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+@model ProdutoViewModel
 @{
     ViewData["Title"] = "Produtos";
 }
@@ -23,6 +24,12 @@
             <label for="preco">Preço</label>
             <input type="text" asp-for="Preco" class="form-control" placeholder="Escreva o preço">
             <span asp-validation-for="Preco" class="text-danger"></span>
+         </div>
+
+         <div class="form-group">
+            <label for="estoque">Estoque</label>
+            <input type="text" asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
+            <span asp-validation-for="Estoque" class="text-danger"></span>
          </div>
 
             <div class="d-grid gap-2">
