--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -16,16 +16,18 @@
 
     <div class="form-group">
         <label for="preco">Preço</label>
-        <input type="text" asp-for="Preco" class="form-control" placeholder="Escreva o preço">
+        <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Digite o valor" />
         <span asp-validation-for="Preco" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="estoque">Estoque</label>
-        <input type="text" asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
+        <input type="number" min="1" step="1"  asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
         <span asp-validation-for="Estoque" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary w-100 mt-3">Adicionar</button>
     <button type="button" class="btn btn-danger w-100 mt-3" data-bs-dismiss="modal">Cancelar</button>
+
+
 </form>
