--- a/cafeservellocontroler/Views/Produto/_Editar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Editar.cshtml
@@ -20,9 +20,9 @@
             <span asp-validation-for="Descricao" class="text-danger"></span>
          </div>
 
-         <div class="form-group">
+        <div class="form-group">
             <label for="preco">Preço</label>
-            <input type="text" asp-for="Preco" class="form-control" placeholder="Escreva o preço">
+            <input asp-for="Preco" id="precoEditar" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Digite o valor" />
             <span asp-validation-for="Preco" class="text-danger"></span>
          </div>
 
@@ -37,7 +37,12 @@
             <a class="btn btn-secondary" asp-controller="Produto" asp-action="Index" role="button">Voltar</a>
             </div>
 
-      </form>
+
+   
+
+
+</form>
+
 
       <style>
           .btn-criar{
