--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -4,19 +4,19 @@
 <form id="formProduto" asp-controller="Produto" asp-action="Criar" method="post">
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" asp-for="Nome" class="form-control" placeholder="Escreva o nome do produto">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Informe o nome do produto">
         <span asp-validation-for="Nome" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="descricao">Descrição</label>
-        <input type="text" asp-for="Descricao" class="form-control" placeholder="Escreva a descrição">
+        <input type="text" asp-for="Descricao" class="form-control" placeholder="Informe a descrição">
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="preco">Preço</label>
-        <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Digite o valor" />
+        <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
         <span asp-validation-for="Preco" class="text-danger"></span>
     </div>
 
@@ -25,7 +25,7 @@
         <input type="number" min="0" step="1" min="0"
         onkeydown="if(event.key === '-' || event.key === 'e' || event.key === '+' ) event.preventDefault();"
         oninput="this.value = this.value.replace(/[^0-9]/g, '');"
-        asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
+               asp-for="Estoque" class="form-control" placeholder="Informe a quantidade em estoque">
         <span asp-validation-for="Estoque" class="text-danger"></span>
     </div>
 
