--- a/cafeservellocontroler/Views/Produto/_Editar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Editar.cshtml
@@ -10,25 +10,25 @@
         <input type="hidden" asp-for="Id"/>
          <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" asp-for="Nome" class="form-control" placeholder="Escreva o nome do produto">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Informe o nome do produto">
             <span asp-validation-for="Nome" class="text-danger"></span>
          </div>
 
          <div class="form-group">
             <label for="tipo">Tipo</label>
-            <input type="text" asp-for="Descricao" class="form-control" placeholder="Escreva o tipo">
+        <input type="text" asp-for="Descricao" class="form-control" placeholder="Informe o tipo">
             <span asp-validation-for="Descricao" class="text-danger"></span>
          </div>
 
         <div class="form-group">
             <label for="preco">Preço</label>
-            <input asp-for="Preco" id="precoEditar" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Digite o valor" />
+        <input asp-for="Preco" id="precoEditar" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
             <span asp-validation-for="Preco" class="text-danger"></span>
          </div>
 
          <div class="form-group">
             <label for="estoque">Estoque</label>
-            <input type="text" asp-for="Estoque" class="form-control" placeholder="Escreva a quantidade em estoque">
+        <input type="text" asp-for="Estoque" class="form-control" placeholder="Informe a quantidade em estoque">
             <span asp-validation-for="Estoque" class="text-danger"></span>
          </div>
 
