--- a/cafeservellocontroler/Views/Revendedor/_Editar.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/_Editar.cshtml
@@ -10,37 +10,37 @@
     <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" asp-for="Nome" class="form-control" placeholder="Escreva o nome do revendedor">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Informe o nome do revendedor">
         <span asp-validation-for="Nome" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="telefone">Telefone</label>
-        <input type="text" asp-for="Telefone" class="form-control" placeholder="Escreva o telefone">
+        <input type="text" asp-for="Telefone" class="form-control" placeholder="Informe o telefone">
         <span asp-validation-for="Telefone" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" asp-for="Email" class="form-control" placeholder="Escreva o email">
+        <input type="email" asp-for="Email" class="form-control" placeholder="Informe o email">
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="cnpj">Cnpj</label>
-        <input type="text" asp-for="Cnpj" class="form-control" placeholder="Escreva o Cnpj">
+        <input type="text" asp-for="Cnpj" class="form-control" placeholder="Informe o Cnpj">
         <span asp-validation-for="Cnpj" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="endereco">Endereço</label>
-        <input type="text" asp-for="Endereco" class="form-control" placeholder="Escreva o endereço">
+        <input type="text" asp-for="Endereco" class="form-control" placeholder="Informe o endereço">
         <span asp-validation-for="Endereco" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="nomefantasia">Nome Fantasia</label>
-        <input type="text" asp-for="NomeFantasia" class="form-control" placeholder="Escreva o Nome Fantasia">
+        <input type="text" asp-for="NomeFantasia" class="form-control" placeholder="Informe o Nome Fantasia">
         <span asp-validation-for="NomeFantasia" class="text-danger"></span>
     </div>
 
