--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                             </a>
                         </li>
 
-                        <li class="side-item" >
+                    <li class="side-item" data-url="/Fornecedor/Index">
                             <a href="#">
                                 <i class="fa-solid fa-hands"></i>
                                 <span class="item-description">
