--- a/cafeservellocontroler/Views/Fornecedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Fornecedor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿@using cafeservellocontroler.Models.ViewModels
 @model List<FornecedorViewModel>
 @{
     ViewData["Title"] = "Fornecedor";
