--- a/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿
+@using cafeservellocontroler.Models.ViewModels
 @model RevendedorViewModel
 
 <form id="formProduto" asp-controller="Revendedor" asp-action="Criar" method="post">
