--- a/cafeservellocontroler/Views/Fornecedor/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Fornecedor/_Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿
+@using cafeservellocontroler.Models.ViewModels
 @model FornecedorViewModel
 
 <form id="formFornecedor" asp-controller="Fornecedor" asp-action="Criar" method="post">
