--- a/cafeservellocontroler/Views/Fornecedor/_Editar.cshtml
+++ b/cafeservellocontroler/Views/Fornecedor/_Editar.cshtml
@@ -1,4 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿
+@using cafeservellocontroler.Models.ViewModels
 @model FornecedorViewModel
 @{
     ViewData["Title"] = "Fornecedor";
