--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿
+@using cafeservellocontroler.Models.ViewModels
 @model List<ProdutoViewModel>
 @{
     ViewData["Title"] = "Produtos";
