--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -1,4 +1,4 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿@using cafeservellocontroler.Models.ViewModels
 @model ProdutoViewModel
 
 <form id="formProduto" asp-controller="Produto" asp-action="Criar" method="post">
