--- a/cafeservellocontroler/Views/Revendedor/ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/ApagarConfirmacao.cshtml
@@ -1,4 +1,5 @@
-﻿@using cafeservellocontroler.Models.Pessoa.ViewModels
+﻿
+@using cafeservellocontroler.Models.ViewModels
 @model RevendedorViewModel
 @{
     ViewData["Title"] = "Confirmação de Apagar Revendedor";
