--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -64,8 +64,24 @@
 
 
     @*Aqui e a tabela, onde quando for adicionado ira aparecer um novo produto*@
+        
+         <div class="search-position">   
+            <div id="container-search">
+                <div class="input-group">
+                    <div class="input-icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        
+                    </div>
+                    <input type="text"
+                           id="search"
+                           class="input-field"
+                           placeholder="Pesquisar Produto" />
+                </div>
+            </div>
+         </div>
 
-        <table class="table">
+
+        <table class="table" id="table">
         <thead >
             <tr>
                 <th scope="col">Codigo</th>
@@ -139,8 +155,11 @@
                 }
             }
 
+                
         </tbody>
     </table>
+
+     
 </div>
 </div>
 
