--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CAFÉ SERVELLO</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
+
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sidebar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Search_PesquisaCss/Search.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/cafeservellocontroler.styles.css" asp-append-version="true" />
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
           integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-</head>
 
 
     
+        </head>
+
         <body class="bodi">
            
             @* NAVBAR *@
@@ -109,13 +114,6 @@
             </div>
 
     
-        
-
-        
-
-        
-
-
 
     <div class="container-fluid">
         <main role="main" class=" custom">
@@ -123,11 +121,17 @@
         </main>
     </div>
     
+
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    
     <script src="~/js/ValidacoesProduto/validacaoCrud.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/Search_PesquisaJs/Search.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script src="~/js/sidebar.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
