--- a/cafeservellocontroler/Views/Home/Index.cshtml
+++ b/cafeservellocontroler/Views/Home/Index.cshtml
@@ -4,3 +4,8 @@
     ViewData["Title"] = "Home Page";
 }
 <h1>CaféServello</h1>
+<div class="d-flex justify-content-end">
+    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCriar" onclick="limparFormulario()">
+        Novo
+    </button>
+</div>
