--- a/cafeservellocontroler/wwwroot/css/site.css
+++ b/cafeservellocontroler/wwwroot/css/site.css
@@ -31,10 +31,9 @@ body {
 
  }
 
-
 .alert {
-    position: relative !important; /* remove o efeito de popup */
-    z-index: 1; /* ou nem precisa */
+    position: relative !important;
+    z-index: 1; 
 }
 
 
