--- a/cafeservellocontroler/Views/Produto/_ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Produto/_ApagarConfirmacao.cshtml
@@ -4,10 +4,22 @@
 @{
     ViewData["Title"] = "Confirmação de Apagar Produto";
 }
-
+<div class="div-Criar responsivo">
 <div class="text-center">
-    <h3>Realmente deseja apagar o Produto (@Model.Nome)</h3>
+    <p class="btn-danger p-4">Aviso, o produto selecionado será excluído permanentemente!</p>
+    <p class="display-6">Realmente deseja apagar o Produto
+        (@Model.Nome)</p>
 
+
+   
     <a class="btn btn-primary btn-block" role="button" asp-controller="Produto" asp-action="Index">Cancelar Exclusão</a>
-    <a class="btn btn-danger btn-block" role="button"  asp-controller="Produto" asp-route-id="@Model.Id" asp-action="Apagar">Confirmar Exclusão</a>
+
+    <a role="button" class="btn-sm btn-outline-danger btnApagar" asp-controller="Produto" asp-route-id="@Model.Id" asp-action="Apagar">
+        
+        <i class="fa-regular fa-trash-can fa-lg"></i>
+        Excluir
+    </a>
+    
 </div>
+</div>
+
