--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -1,7 +1,11 @@
 ﻿@using cafeservellocontroler.Models.ViewModels
 @model ProdutoViewModel
 
+
+
 <form id="formProduto" asp-controller="Produto" asp-action="Criar" method="post">
+    <div class="div-Criar reponsivo">
+    
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Informe o nome do produto">
@@ -14,30 +18,55 @@
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label for="precoCompra">Preço Compra</label>
-        <input asp-for="PrecoCompra" id="precoCompra" name="PrecoCompra" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
-        <span asp-validation-for="PrecoCompra" class="text-danger"></span>
+    <div class="row">
+        <div class="form-group col-md-6 ">
+            <label for="precoCompra">Preço Compra</label>
+            <input asp-for="PrecoCompra" id="precoCompra" name="PrecoCompra" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
+            <span asp-validation-for="PrecoCompra" class="text-danger"></span>
+        </div>
+
+
+            <div class="form-group col-md-6">
+            <label for="preco">Preço Venda</label>
+            <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
+            <span asp-validation-for="Preco" class="text-danger"></span>
+        </div>
     </div>
 
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label for="estoque">Estoque</label>
+            <input type="number" min="0" step="1" min="0"
+            onkeydown="if(event.key === '-' || event.key === 'e' || event.key === '+' ) event.preventDefault();"
+            oninput="this.value = this.value.replace(/[^0-9]/g, '');"
+                   asp-for="Estoque" class="form-control" placeholder="Informe a quantidade em estoque">
+            <span asp-validation-for="Estoque" class="text-danger"></span>
+        </div>     
+    </div>
+</div>
 
-    <div class="form-group">
-        <label for="preco">Preço</label>
-        <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
-        <span asp-validation-for="Preco" class="text-danger"></span>
+    <div class=" d-flex justify-content-end   ">
+
+        <button type="submit" class="btn btn-primary mt-3 button-submit-close " style="margin-right: 15px">
+            <i class="fa-regular fa-floppy-disk fa-lg"></i>
+            Adicionar
+
+           
+        </button>
+        
+        <a role="button" class="btn btn-outline-danger mt-3 button-submit-close" data-bs-dismiss="modal">
+            <i class="fa-solid fa-eject fa-lg"></i>
+            Cancelar 
+        </a>
     </div>
 
-    <div class="form-group">
-        <label for="estoque">Estoque</label>
-        <input type="number" min="0" step="1" min="0"
-        onkeydown="if(event.key === '-' || event.key === 'e' || event.key === '+' ) event.preventDefault();"
-        oninput="this.value = this.value.replace(/[^0-9]/g, '');"
-               asp-for="Estoque" class="form-control" placeholder="Informe a quantidade em estoque">
-        <span asp-validation-for="Estoque" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-primary w-100 mt-3">Adicionar</button>
-    <button type="button" class="btn btn-danger w-100 mt-3" data-bs-dismiss="modal">Cancelar</button>
-
+   
+    
 
 </form>
+
+
+
+
+
+        
