--- a/cafeservellocontroler/Views/Venda/Index.cshtml
+++ b/cafeservellocontroler/Views/Venda/Index.cshtml
@@ -31,7 +31,7 @@
 }
 
 <div class="mt-4">
-    <table class="table table-striped table-hover">
+    <table class="table">
         <thead>
             <tr>
                 <th>ID</th>
