--- a/cafeservellocontroler/wwwroot/css/sidebar.css
+++ b/cafeservellocontroler/wwwroot/css/sidebar.css
@@ -7,11 +7,15 @@ bodi{
 }
 
 body {
-    display: flex;
+    
     min-height: 100vh;
     background-color: #e3e9f7;
     
     
+}
+
+.layout {
+    display: flex;
 }
 
 main.custom {
@@ -187,3 +191,4 @@ ul {
 a {
     text-decoration: none;
 }
+
